# swagger/swagger.json
@@ -196,6 +196,13 @@
                         "schema": {
                             "$ref": "#/definitions/models.RedReq"
                         }
+                    },
+                    {
+                        "in": "query",
+                        "name": "cancel",
+                        "description": "cancle for rancher",
+                        "required": true,
+                        "type": "boolean"
                     }
                 ],
                 "responses": {
@@ -303,6 +310,36 @@
                 }
             }
         },
+        "/cattle/keepz": {
+            "get": {
+                "tags": [
+                    "cattle"
+                ],
+                "description": "占庄",
+                "operationId": "CattleController.占庄",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "token",
+                        "description": "The token for user",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "roomid",
+                        "description": "The roomid for rancher",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} success"
+                    }
+                }
+            }
+        },
         "/cattle/master": {
             "post": {
                 "tags": [
@@ -374,6 +411,66 @@
                     },
                     "403": {
                         "description": "query is empty"
+                    }
+                }
+            }
+        },
+        "/fly/start": {
+            "post": {
+                "tags": [
+                    "fly"
+                ],
+                "description": "启动",
+                "operationId": "FlyController.启动",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "token",
+                        "description": "The token for user",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "roomid",
+                        "description": "The id for room",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} ok"
+                    }
+                }
+            }
+        },
+        "/fly/stop": {
+            "post": {
+                "tags": [
+                    "fly"
+                ],
+                "description": "停止",
+                "operationId": "FlyController.停止",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "token",
+                        "description": "The token for user",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "roomid",
+                        "description": "The id for room",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} ok"
                     }
                 }
             }
@@ -766,6 +863,39 @@
                 "responses": {
                     "200": {
                         "description": "{string} success"
+                    },
+                    "403": {
+                        "description": ":roomid is empty"
+                    }
+                }
+            }
+        },
+        "/room/{roomid}/cancle": {
+            "post": {
+                "tags": [
+                    "room"
+                ],
+                "description": "Cancle room",
+                "operationId": "RoomController.Cancle Room",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "token",
+                        "description": "The token for user",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "roomid",
+                        "description": "The roomid",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} ok"
                     },
                     "403": {
                         "description": ":roomid is empty"
@@ -1201,6 +1331,9 @@
                     "type": "string",
                     "format": "string"
                 },
+                "Fly": {
+                    "type": "boolean"
+                },
                 "LenUser": {
                     "type": "integer",
                     "format": "int64"
@@ -1374,10 +1507,6 @@
                 },
                 "Nicname": {
                     "type": "string"
-                },
-                "Score": {
-                    "type": "integer",
-                    "format": "int64"
                 }
             }
         }
@@ -1398,6 +1527,10 @@
         {
             "name": "cattle",
             "description": "Operations about Cattle\n"
+        },
+        {
+            "name": "fly",
+            "description": "Operations about super\n"
         }
     ]
 }
